# githut

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape  flake.nix
.github/workflows/: ci.yml  release.yml
docs/: demo.tape
src/: app.rs  config.rs  events.rs  git.rs  github.rs  input.rs  main.rs  markdown.rs  types.rs  ui.rs
src/api/: auth.rs  client.rs  mod.rs
src/tui/: events.rs  ui.rs
