[package]
name = "githut"
version = "0.1.0"
edition = "2021"
description = "A TUI for discovering, browsing, and acquiring GitHub repositories"
license = "MIT"
repository = "https://github.com/karimKandil0/githut"
homepage = "https://github.com/karimKandil0/githut"
keywords = ["github", "tui", "terminal", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "githut"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# GitHub API
octocrab = "0.41"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git operations (clone)
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Vendor OpenSSL for portable cross-platform builds (CI)
openssl = { version = "0.10", features = ["vendored"] }

# Open URLs in browser
open = "5"

# Error handling
anyhow = "1"

# URL encoding for search queries
urlencoding = "2"

# Base64 decoding for readme content
base64 = "0.22"

# Markdown rendering in preview pane
pulldown-cmark = { version = "0.12", default-features = false }

# Config file parsing
toml = "0.8"

# HTTP client for raw file downloads (fallback for large files)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
